@@ -54,7 +54,6 @@ public class AssertThatJUnit47RulesWorks {
 	}
 
 	private class MyRule implements MethodRule {
-		@Override
 		public Statement apply(final Statement base, FrameworkMethod method, Object target) {
 			return new Statement() {
 				@Override
